# stickerpicker

./: .gitignore  main.py  pyproject.toml
animated/: BabyYoda.json  ShadowKitty.json  catsunicmass.json  hPBHYp_by_stickers_stealer_bot.json  pack.json
src/sticker/: pack.py  scalar_convert.py  stickerimport.py
src/sticker/lib/: image.py  matrix.py  util.py
web/packs/: Anak_kucing9.json  Cutecatsmeme.json  Kitten_Akul_Nyasticks.json  NekoHD.json  PhilTheOwl.json  bloopvk.json  bosyavk.json  bubbleugor.json  chrisandkristina.json  chriskristinaandchrissy.json  chrisvk.json  demoness.json  froggymix.json  ginger_vk.json  honeyvk.json  hopper_vk.json  index.json  kocheng.json  kristinavk.json  lady_ai.json  micehugs.json  mintyvk.json  mochipeachcat2.json  pappy_fox.json  rebus_vk.json  sad_pctr_by_fStikBot.json  shortyvk.json  snowyleafie_vk.json
web/src/: giphy.js  index.js  search-box.js
